[gd_scene load_steps=2 format=3 uid="uid://tb2s3se0nbks"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_pqqv4"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_pqqv4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0.117647, 0.12549, 0.133333, 0.745098)

[node name="Resume" type="Button" parent="."]
process_mode = 3
offset_left = 511.0
offset_top = 181.0
offset_right = 654.0
offset_bottom = 236.0
theme_override_font_sizes/font_size = 30
text = "RESUME"

[node name="Save" type="Button" parent="."]
process_mode = 3
offset_left = 511.0
offset_top = 246.0
offset_right = 654.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 30
text = "SAVE"

[node name="Load" type="Button" parent="."]
process_mode = 3
offset_left = 511.0
offset_top = 311.0
offset_right = 654.0
offset_bottom = 366.0
theme_override_font_sizes/font_size = 30
text = "LOAD"

[node name="Menu" type="Button" parent="."]
process_mode = 3
offset_left = 512.0
offset_top = 377.0
offset_right = 655.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 30
text = "MENU"

[node name="Label" type="Label" parent="."]
offset_left = 534.0
offset_top = 449.0
offset_right = 636.0
offset_bottom = 483.0
theme_override_font_sizes/font_size = 30
text = "VOLUME"

[node name="HSlider" type="HSlider" parent="."]
process_mode = 3
offset_left = 518.0
offset_top = 485.0
offset_right = 652.0
offset_bottom = 508.0
value = 10.0

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
